<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark_theme_yellow"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:background="@color/primary_dark_theme_yellow"
            android:orientation="vertical">

            <include
                android:id="@+id/top_include"
                layout="@layout/top_panel_layout" />

            <TextView
                android:id="@+id/txt_WelcomeBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/login_txt1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_WelcomeBack"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/login_txt2"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:background="@drawable/layout_login_background"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:text="@string/login_txt3"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/login_rounded_edittext"
                android:hint="@string/login_hint1"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_rounded_edittext"
                android:hint="@string/login_hint2"
                android:inputType="textWebPassword"
                android:padding="15dp"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="100"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btn_needHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="55dp"
                    android:fontFamily="@font/roboto"
                    android:text="Need Help?"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/login_btn1"
                    android:fontFamily="@font/roboto"
                    android:text="Sign In"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/login_registration_txt"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/ProgressBar"/>
</RelativeLayout>